--- a/static/style.css
+++ b/static/style.css
@@ -9,3 +9,99 @@
 body{
     background-color: #000000;
 }
+
+
+
+.mainheader{
+    width: 100%;
+    height: 80px;
+    display: block;
+    background-color: #101010;
+    box-shadow: 0 5px 8px -6px #EE4036;
+}
+.innerheader{
+    width: 80%;
+    /* background-color: blue; */
+    display: block;
+    height: 100%;
+    margin: 0 auto;
+}
+.headerlogocontainer:hover{
+    box-shadow: 0 10px 8px -6px #EE4036;
+}
+.headerlogocontainer{
+    float: left;
+    user-select: none;
+    display: table;
+    height: 100%;
+    box-shadow: 0 8px 6px -6px #EE4036;
+}
+#mainlogo{
+    font-size: 40px;
+    height: 100%;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 0 10px;
+}
+.navigationmenu:hover{
+    box-shadow: 0 10px 8px -6px #EE4036;
+}
+.navigationmenu{
+    float: right;
+    height: 100%;
+    display: table;
+    box-shadow: 0 8px 6px -6px #EE4036;
+}
+.navigationmenu_item_img{
+    border-radius: 50%;
+    transition: 0.2s;
+}
+.navigationmenu_item_img img{
+    width: 38px;
+    object-fit: contain;
+}
+.navigationmenu_item_img:hover{
+    transform: translate(-5px, -5px);
+}
+.navigationmenu_item{
+    font-size: 20px;
+    display: table-cell;
+    padding: 0 8px;
+    vertical-align: middle;
+}
+
+
+/* FOR PHONES */
+@media only screen and (max-device-width: 640px) {
+    .navigationmenu_item_img img{
+        width: 20px;
+    }
+    #mainlogo{
+        font-size: 30px;
+    }
+    #automateeverything{
+        display: none;
+    }
+
+}
+
+
+/* SCROLLBAR */
+/* width */
+::-webkit-scrollbar {
+    width: 7px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+    background: #303030;
+    border-radius: 5px;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+}
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
