--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,27 @@
     <title>jido - {% block title %}{% endblock title %}</title>
 </head>
 <body>
+    <div class="mainheader">
+        <div class="innerheader">
+            
+            <div class="headerlogocontainer">
+                <h1 id="mainlogo">
+                    jido<span id="automateeverything" style="font-size: 12px; color: #EE4036; font-weight: 200;">Automate Everything</span>
+                </h1>
+            </div>
+            
+            <div class="navigationmenu">
+                <div class="navigationmenu_item"><div class="navigationmenu_item_img"><img src="https://img.icons8.com/metro/52/ffffff/plus.png"/></div></div>
+                <div class="navigationmenu_item"><div class="navigationmenu_item_img"><img src="https://img.icons8.com/material-outlined/48/ffffff/search--v1.png"/></div></div>
+                <div class="navigationmenu_item"><div class="navigationmenu_item_img"><img src="https://rpgplanner.com/wp-content/uploads/2020/06/no-photo-available.png"/></div></div>
+            </div>
 
+        </div>
+    </div>
 
+    <style>
+        
+    </style>
 
     
     <!-- INJECTED BODY -->
