init git auth now

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <div class="mainheader">
         <div class="innerheader">
             
-            <div class="headerlogocontainer" onclick="window.location.href = '/login';">
+            <div class="headerlogocontainer" onclick="window.location.href = '/';">
                 <h1 id="mainlogo">
                     jido<span id="automateeverything" style="font-size: 12px; color: #EE4036; font-weight: 200;">Automate Everything</span>
                 </h1>
