--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,38 +8,53 @@
     <link rel="stylesheet" href="/static/style.css">
     <title>jido - {% block title %}{% endblock title %}</title>
 </head>
+
 <body>
     <div class="mainheader">
         <div class="innerheader">
-            
+
             <div class="headerlogocontainer" onclick="window.location.href = '/';">
                 <h1 id="mainlogo">
-                    jido<span id="automateeverything" style="font-size: 12px; color: #EE4036; font-weight: 200;">Automate Everything</span>
+                    jido<span id="automateeverything"
+                        style="font-size: 12px; color: #EE4036; font-weight: 200;">Automate Everything</span>
                 </h1>
             </div>
-            
+
             <div class="navigationmenu">
-                <div class="navigationmenu_item"><div class="navigationmenu_item_img"><img src="https://img.icons8.com/metro/52/ffffff/plus.png"/></div></div>
-                <div class="navigationmenu_item"><div class="navigationmenu_item_img"><img src="https://img.icons8.com/material-outlined/48/ffffff/search--v1.png"/></div></div>
-                <div class="navigationmenu_item"><div class="navigationmenu_item_img"><img src="https://rpgplanner.com/wp-content/uploads/2020/06/no-photo-available.png"/></div></div>
+                <div class="navigationmenu_item">
+                    <div class="navigationmenu_item_img">
+                        <img src="https://img.icons8.com/metro/52/ffffff/plus.png" />
+                    </div>
+                </div>
+                <div class="navigationmenu_item">
+                    <div class="navigationmenu_item_img">
+                        <img src="https://img.icons8.com/material-outlined/48/ffffff/search--v1.png" />
+                    </div>
+                </div>
+                <div class="navigationmenu_item" id="userProfile" onclick="window.location.href = '/login';">
+                    <div class="navigationmenu_item_img">
+                        <img src="https://rpgplanner.com/wp-content/uploads/2020/06/no-photo-available.png" />
+                    </div>
+                </div>
             </div>
 
         </div>
     </div>
 
     <style>
-        
+
     </style>
 
-    
+
     <!-- INJECTED BODY -->
     {% block body %}
     {% endblock body %}
     <!-- INJECTED BODY END -->
 
     <!-- DEFAULT HTML -->
-    
+
 
 </body>
 {% block postdoc_script %}{% endblock postdoc_script %}
+
 </html>
