--- a/templates/login.html
+++ b/templates/login.html
@@ -1,1 +1,18 @@
 {% extends 'base.html' %}
+{% load socialaccount %}
+{% block title %}Login{% endblock title %}
+{% block body %}
+
+<h1>Login Using GitHub</h1>
+
+{{user}}
+<br>
+<br>
+<a href="{% provider_login_url "github" method="oauth2" %}">GitHub</a><br>
+<a href="{% provider_login_url "google" method="oauth2" %}">Google</a>
+
+<br><br>
+<a href="/accounts/logout">Logout</a>
+
+
+{% endblock body %}
