--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,4 @@
 {% extends 'base.html' %}
-{% load socialaccount %}
 {% block title %}Login{% endblock title %}
 {% block body %}
 
@@ -8,8 +7,8 @@
 {{user}}
 <br>
 <br>
-<a href="{% provider_login_url "github" method="oauth2" %}">GitHub</a><br>
-<a href="{% provider_login_url "google" method="oauth2" %}">Google</a>
+<a href="">GitHub</a><br>
+<a href="">Google</a>
 
 <br><br>
 <a href="/accounts/logout">Logout</a>
