ii input da ne!

--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root {
-    --ORANGEISH : #EE4036;
-    --YELLOWISH : #FAAF40;
+    --ORANGEISH: #EE4036;
+    --ORANGEISH__fade1: rgba(238, 63, 54, 0.8);
+    --ORANGEISH__fade2: rgba(238, 63, 54, 0.5);
+    --ORANGEISH__fade3: rgba(238, 63, 54, 0.3);
+    --YELLOWISH: #FAAF40;
 }
+
 * {
     margin: 0;
     padding: 0;
@@ -11,11 +15,9 @@
     font-family: 'Exo', sans-serif;
 }
 
-
 body {
     background-color: #000000;
 }
-
 
 /* TEXT DECOR */
 
@@ -59,11 +61,48 @@ body {
     font-size: 10px;
 }
 
-hr{
+hr {
     border: 1px solid #555;
 }
 
+input::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: black;
+    opacity: 1;
+    /* Firefox */
+}
+
+input:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    color: black;
+}
+
+input::-ms-input-placeholder {
+    /* Microsoft Edge */
+    color: black;
+}
+
+input:hover {
+    background-color: #888;
+}
+input:focus {
+    transform: translate(-3px, -3px);
+    background-color: var(--ORANGEISH__fade1);
+}
+input {
+    transition: 0.2s;
+    border: none;
+    outline: none;
+    padding: 5px;
+    margin: 3px;
+    border-radius: 5px;
+    /* color: white; */
+    background-color: #666;
+    width: 250px;
+}
+
 /* FLEXy */
+
 .flex-row {
     display: flex;
     flex-direction: row;
@@ -84,9 +123,10 @@ hr{
     flex-direction: column-reverse;
 }
 
-.flex-grow{
+.flex-grow {
     flex-grow: 1;
 }
+
 .flex-grow div {
     flex-grow: 1;
 }
@@ -95,7 +135,6 @@ hr{
     margin: 5px;
     padding: 10px;
 }
-
 
 .mainheader {
     width: 100%;
@@ -175,7 +214,6 @@ hr{
     box-shadow: 2px 2px 3px var(--YELLOWISH);
 }
 
-
 /* FOR PHONES */
 
 @media only screen and (max-device-width: 640px) {
@@ -192,7 +230,7 @@ hr{
         flex-direction: column;
         overflow: auto;
     }
-    hr{
+    hr {
         display: none;
     }
 }
