--- a/templates/login.html
+++ b/templates/login.html
@@ -5,20 +5,24 @@
 <div class="slate-container">
     <div class="flex-row row-responsive">
         <div class="flex-object">
-            SIGN IN
+            <div class="fnt-med">SIGN IN</div>
             
+            <br><br>
             <div class="signin-container">
-                <input type="text" name="username" id="username" placeholder="Username"><br>
+                <input type="text" name="username" id="username" placeholder="Username"><br><br>
                 <input type="password" name="password" id="password" placeholder="Password"><br>
             </div>
-
+            
         </div>
         
         
         
         
         <hr style="height: 70vh;">
-        <div class="flex-object flex-grow fnt-med">SIGNUP</div>
+        <div class="flex-object flex-grow">
+            <div class="fnt-med">SIGN UP</div>
+        
+        </div>
 
 
     </div>
