--- a/static/style.css
+++ b/static/style.css
@@ -124,11 +124,15 @@ button:hover {
     color: whitesmoke;
 }
 
+button:disabled {
+    background-color: var(--YELLOWISH__fade3);
+
+}
 button {
     color: #202020;
+    background-color: var(--YELLOWISH__fade1);
     outline: none;
     transition: 0.2s;
-    background-color: var(--YELLOWISH__fade1);
     padding: 5px 10px;
     margin: 10px;
     border-radius: 5px;
