--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 
 <div class="slate-container">
     <div class="flex-row row-responsive">
-        <div class="flex-object">
+        <div class="flex-object signin-parent-container">
             <div class="fnt-med noselect">SIGN IN</div>
 
             <br><br>
@@ -59,8 +59,8 @@
 
 
         <hr style="height: 70vh;">
-        <div class="flex-object flex-grow">
-            <div class="fnt-med">SIGN UP</div>
+        <div class="flex-object signin-parent-container flex-grow">
+            <div class="fnt-med">SIGN UP</div><br><br>
 
 
             <div class="signin-container noselect">
