--- a/templates/login.html
+++ b/templates/login.html
@@ -14,12 +14,14 @@
 
                     {% csrf_token %}
 
-                    <input type="text" name="login_username" id="login_username" placeholder="Username"><br><br>
+                    <input type="text" name="login_username" id="login_username" placeholder="Username"
+                        required><br><br>
 
                     <div style="position: relative;">
-                        <input type="password" name="login_password" id="login_password" placeholder="Password">
+                        <input type="password" name="login_password" id="login_password" placeholder="Password"
+                            required>
                         <div class="tooltip">
-                            <div class="tooltiptext">Show Password</div>
+                            <div class="tooltiptext" style="bottom: -60px;">Show Password</div>
                             <img onclick="togglePasswordView(document.getElementById('login_password'), this)"
                                 id="showloginpasswordbtn"
                                 style="width: 15px; position: absolute; bottom: -30px; right: 10px;"
@@ -33,9 +35,14 @@
                 <br>
                 <h5>OR</h5>
                 <br>
-                <div class="social_login orange_neon" style="background-color: #171515;">
-                    Login Using GitHub
-                    <img src="https://img.icons8.com/ios-glyphs/50/ffffff/github.png" style="float: right;">
+
+                <div class="tooltip">
+
+                    <div class="social_login orange_neon" style="background-color: #171515;">
+                        Login Using GitHub
+                        <img src="https://img.icons8.com/ios-glyphs/50/ffffff/github.png" style="float: right;">    
+                    </div>
+                    <div class="tooltiptext">Coming Soon!</div>
                 </div>
 
                 <script> // UI Scripting
@@ -69,14 +76,18 @@
 
                     {% csrf_token %}
 
-                    <input style="width: 90%;" type="text" name="signup_username" id="signup_username" autocomplete="off" placeholder="Username"><br><br>
-                    <input style="width: 90%;" type="text" name="first_name" id="first_name" autocomplete="off" placeholder="Display Name"><br><br>
-                    <input style="width: 90%;" type="email" name="email" id="email" autocomplete="off" placeholder="E-mail"><br><br>
+                    <input style="width: 90%;" type="text" name="signup_username" id="signup_username"
+                        autocomplete="off" placeholder="Username"><br><br>
+                    <input style="width: 90%;" type="text" name="first_name" id="first_name" autocomplete="off"
+                        placeholder="Display Name"><br><br>
+                    <input style="width: 90%;" type="email" name="email" id="email" autocomplete="off"
+                        placeholder="E-mail"><br><br>
 
                     <div style="position: relative;">
-                        <input style="width: 90%;" type="password" name="signup_password" id="signup_password" placeholder="Password">
+                        <input style="width: 90%;" type="password" name="signup_password" id="signup_password"
+                            placeholder="Password">
                         <div class="tooltip">
-                            <div class="tooltiptext">Show Password</div>
+                            <div class="tooltiptext" style="bottom: -60px;">Show Password</div>
                             <img onclick="togglePasswordView(document.getElementById('signup_password'), this)"
                                 id="showloginpasswordbtn"
                                 style="width: 15px; position: absolute; bottom: -30px; right: 10px;"
@@ -85,9 +96,10 @@
                     </div>
                     <br>
                     <br>
-                    <input onchange="console.log(this.value);" type="checkbox" name="agreed2TNC" id="agreed2TNC"> I agree to the <a href="#">Terms and Conditions</a>...
+                    <input onchange="console.log(this.value);" type="checkbox" name="agreed2TNC" id="agreed2TNC"> I
+                    agree to the <a href="#">Terms and Conditions</a>...
                     <br>
-                    <button style="margin-left: 0" type="button">SIGN UP</button>
+                    <button style="margin-left: 0" type="button" disabled>SIGN UP</button>
 
                 </form>
             </div>
