--- a/templates/base.html
+++ b/templates/base.html
@@ -56,5 +56,24 @@
 
 </body>
 {% block postdoc_script %}{% endblock postdoc_script %}
+<script>
+    
+    function pushLoaderUI(obj) {
+        console.log(obj.offsetHeight, obj.offsetWidth);
+
+        obj.style.height = String(obj.offsetHeight) + 'px'; obj.style.width = String(obj.offsetWidth) + 'px';
+
+        obj.innerHTML = `<img class="loading-gif-img" src="https://i.pinimg.com/originals/a4/f2/cb/a4f2cb80ff2ae2772e80bf30e9d78d4c.gif" alt="">`;
+
+    }
+
+    function removeLoader(obj, newHTML) {
+        obj.style.removeProperty('height');
+        obj.style.removeProperty('width');
+
+        obj.innerHTML = newHTML;
+    }
+
+</script>
 
 </html>
