--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
-{% block title %}{% endblock title %}
+{% block title %}My Profile{% endblock title %}
 {% block body %}
 
-USER PROFILE
+USER PROFILE - 
+
+<a href="/logout">Logout</a>
 
 {% endblock body %}
