--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -2,7 +2,8 @@
 {% block title %}My Profile{% endblock title %}
 {% block body %}
 
-USER PROFILE - 
+USER PROFILE - {{user}}
+<br><br>
 
 <a href="/logout">Logout</a>
 
